force-app/main/default/objects/Company_Investment__c/Company_Investment__c.object-meta.xml
<CustomObject>
    <label>Company Investment</label>
    <nameField>
        <label>Company Investments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Investments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>