force-app/main/default/objects/Company_Investment__c/fields/Close_Date_of_Investments__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_of_Investments__c</fullName>
    <label>Close Date of Investments</label>
    <type>DateTime</type>
</CustomField>