force-app/main/default/objects/Company_Investment__c/fields/Investment_amount__c.field-meta.xml
<CustomField>
    <fullName>Investment_amount__c</fullName>
    <label>Investment amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>