force-app/main/default/objects/Company_Investment__c/fields/Open_Date_of_Investments__c.field-meta.xml
<CustomField>
    <fullName>Open_Date_of_Investments__c</fullName>
    <label>Open Date of Investments</label>
    <type>DateTime</type>
</CustomField>