force-app/main/default/objects/Company_Investment__c/validationRules/Open_has_to_be_before_Close_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Open_has_to_be_before_Close_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Open_Date_of_Investments__c &gt;  Close_Date_of_Investments__c</errorConditionFormula>
    <errorMessage>You can&apos;t Closed Investment if it wasn&apos;t even open</errorMessage>
</ValidationRule>